# DiscordVoice

./: .dockerignore  .env_example  .gitattributes  .gitignore  Aptfile  Dockerfile  Gemfile  Hackmd Description.md  LICENSE  Procfile  Procfile.web  README.md  TERMS OF SERVICES.md  azure_languages.json  build.sh  docker-compose.yml  dv_main.py  dv_tool_function.py  gcp-token-generator.py  get_lang_code.py  languages.json  load_command.py  main.py  main.sh  pyproject.toml  requirements.txt  tool_function.py  tts_alone.py  tts_func.py  website.py  wfnm_main.py  wfnm_tool_function.py
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  codeql.yml  docker-build.yml  heroku.yml
HTTP503/: index.html  style.css
LEGAL DOCUMENTS/: PRIVACY POLICY.md  TERMS OF SERVICES.md
LEGAL DOCUMENTS/EN/: PRIVACY POLICY.md  TERMS OF SERVICES.md
commands/help/: zh-tw.txt
commands/random/: zh-tw.txt
dv_locale/: locale.json
lang_list/: azure_languages.json  google_languages.json
locale/dv_locale/: locale.json  locale_v2.json
requirements/: dev.txt  prod.txt
src/: dv_main.py  dv_tool_function.py  gcp-token-generator.py  get_lang_code.py  get_req_prod_hash.py  redis_dump_postgres.py  tts_alone.py  tts_func.py  website.py  wfnm_main.py  wfnm_tool_function.py
src/modules/: dv_command_func.py  dv_tool_function.py  tts_func.py  wfnm_tool_function.py
templates/: index.html
wfnm_cmd_list/add/: en.txt  zh-tw.txt
wfnm_cmd_list/help/: en.txt  zh-tw.txt
wfnm_cmd_list/list/: en.txt  zh-tw.txt
wfnm_cmd_list/random/: en.txt
wfnm_cmd_list/remove/: en.txt  zh-tw.txt
