[tool.poetry]
name = "repl_python3_DiscordVoice"
version = "0.1.0"
description = ""
authors = ["cytsai1008 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pycld2 = "^0.41"
python-dotenv = "^0.20.0"
py-cord = "^1.7.3"
discord = "^1.7.3"
PyNaCl = "^1.5.0"
google-cloud-texttospeech = "^2.11.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
